# EPITECH

./: .gitgnore  README.md
TEK1/Sem-1/CPE/matchstick/: Makefile  matchstick
TEK1/Sem-1/CPE/pushswap/: Makefile
TEK1/Sem-1/CPOOL_DAY/D01/: mr_clean  (+1 more)
TEK2/Sem-4/Assembly/: Makefile
TEK2/Sem-4/Concurrent_Programming/: Makefile
TEK2/Sem-4/Indie_Studio/: CMakeLists.txt  README.md  build.sh  clean.sh
TEK2/Sem-4/Indie_Studio/ECS/: GameManager.cpp  World.cpp
TEK2/Sem-4/Indie_Studio/ECS/managers/: EntityManager.cpp  SystemManager.cpp
TEK2/Sem-4/Indie_Studio/ECS/systems/: AISystem.cpp  AnimatorSystem.cpp  BombSystem.cpp  ButtonSystem.cpp  CollisionSystem.cpp  ControllerInputSystem.cpp  CountdownSystem.cpp  CubemapSystem.cpp  EndGameSystem.cpp  ExplosionParticleSystem.cpp  MouseInputSystem.cpp  PlayerBombSystem.cpp
TEK2/Sem-4/Indie_Studio/build_tools/cmake/: Findraylib.cmake
TEK2/Sem-4/Indie_Studio/include/: globalScope.hpp  rlights.hpp  scenes.hpp  stdInclude.hpp
TEK2/Sem-4/Indie_Studio/include/ECS/: GameManager.hpp  System.hpp  World.hpp  types.hpp
TEK2/Sem-4/Indie_Studio/include/ECS/components/: AI.hpp  Animations.hpp  Bomb.hpp  BombSettings.hpp  Button.hpp  Collision.hpp  ControllerInput.hpp  Countdown.hpp  Cubemap.hpp  ExplosionParticle.hpp  InputSettings.hpp  MouseInput.hpp  PlayerStat.hpp  PowerUp.hpp  Transform.hpp
TEK2/Sem-4/Indie_Studio/include/ECS/managers/: ComponentManager.hpp  EntityManager.hpp  SystemManager.hpp
TEK2/Sem-4/Indie_Studio/include/ECS/systems/: AISystem.hpp  AnimatorSystem.hpp  BombSystem.hpp  ButtonSystem.hpp  CollisionSystem.hpp  ControllerInputSystem.hpp  CountdownSystem.hpp  CubemapSystem.hpp  EndGameSystem.hpp  ExplosionParticleSystem.hpp  MouseInputSystem.hpp  PlayerBombSystem.hpp
TEK2/Sem-4/Indie_Studio/include/lib/: Lib.hpp
TEK2/Sem-4/Indie_Studio/include/lib/std/: DLLoader.hpp  Exception.hpp  PackedArray.hpp  Stopwatch.hpp  SyntacticSugar.hpp
TEK2/Sem-4/Indie_Studio/lib/: Lib.cpp
TEK2/Sem-4/Indie_Studio/lib/std/: DLLoader.cpp  Exception.cpp  Stopwatch.cpp
TEK2/Sem-4/Indie_Studio/resources/KongRun/: kong_000018.mtl
TEK2/Sem-4/Indie_Studio/resources/ZillaRun/: zilla_000005.mtl
TEK2/Sem-4/Indie_Studio/resources/bomb/: bomb.mtl  piercing-bomb.mtl
TEK2/Sem-4/Indie_Studio/resources/map1/: physicmap.txt
TEK2/Sem-4/Indie_Studio/resources/shaders/: base_lighting.vs  blending.fs  blur.fs  getBrightPixels.fs  lighting.fs
TEK2/Sem-4/Indie_Studio/src/: UIScenes.cpp  globalScope.cpp  main.cpp
(+1147 files in other folders)
